--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "npm-registry",
-  "version": "1.0.0",
-  "description": "Get package name",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "MasterCraft",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "nightmare": "^3.0.2"
-  }
+    "name": "npm-registry",
+    "version": "1.0.0",
+    "description": "Get package name",
+    "main": "app.js",
+    "scripts": {
+        "start": "node app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "MasterCraft",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "nightmare": "^3.0.2"
+    }
 }
